welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:9: error: not found: value nomdelacase
 nomdelacase  match{
 ^